--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
     <div class="start_btn"><button>Start Quiz</button></div>
 
     <!-- Info Box -->
-    <!-- <dsdiv> -->
+    <!-- <div class="info_box">
+      <div class="info-title"><span>Some Rules of this Quiz</span></div>
+      <div class="info-list">
+          <div class="info">1. You will have only <span>15 seconds</span> per each question.</div>
+          <div class="info">2. Once you select your answer, it can't be undone.</div>
+          <div class="info">3. You can't select any option once time goes off.</div>
+          <div class="info">4. You can't exit from the Quiz while you're playing.</div>
+          <div class="info">5. You'll get points on the basis of your correct answers.</div>
+      </div>
+      <div class="buttons">
+          <button class="quit">Exit Quiz</button>
+          <button class="restart">Continue</button>
+      </div>
+  </div> -->
 
     <!-- Quiz Box -->
     <div class="quiz_box">
@@ -33,6 +46,8 @@
           <!-- Here I've inserted question from JavaScript -->
         </div>
         <div class="option_list">
+          <!-- <input type="radio" id="html" name="fav_language" value="HTML" />
+            <label class="option" for="html">HTML</label>   -->
           <!-- Here I've inserted options from JavaScript -->
         </div>
       </section>
@@ -60,10 +75,6 @@
         <button class="quit">Quit Quiz</button>
       </div>
     </div>
-
-    <!-- Inside this JavaScript file I've inserted Questions and Options only -->
-    <script src="js/questions.js"></script>
-
     <!-- Inside this JavaScript file I've coded all Quiz Codes -->
     <script src="js/app.js"></script>
   </body>
