adding animation and countdown timer

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="title">HTML Quiz</div>
         <div class="timer">
           <div class="time_left_txt">Time Left</div>
-          <div class="timer_sec">15</div>
+          <div class="timer_sec"></div>
         </div>
         <div class="time_line"></div>
       </header>
@@ -46,7 +46,7 @@
           <!-- Here I've inserted question from JavaScript -->
         </div>
         <div class="option_list">
-          <!-- <input type="radio" id="html" name="fav_language" value="HTML" />
+          <!-- <input type="radio" id="html" class="inputDel" />
             <label class="option" for="html">HTML</label>   -->
           <!-- Here I've inserted options from JavaScript -->
         </div>
