--- a/Haitham/index.html
+++ b/Haitham/index.html
@@ -80,12 +80,10 @@
       <div class="score_text">
         <!-- Here I've inserted Score Result from JavaScript -->
       </div>
-      <div class="result"></div>
-      <div class="que_text"></div>
-      <!-- <div class="buttons">
+      <div class="buttons">
         <button class="restart">Replay Quiz</button>
         <button class="quit">Quit Quiz</button>
-      </div> -->
+      </div>
     </div>
     <!-- Inside this JavaScript file I've coded all Quiz Codes -->
     <script src="js/app.js"></script>
