--- a/dashboard.html
+++ b/dashboard.html
@@ -1,220 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./img/star.ico" type="image/x-icon" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-      integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="css/dashboard.css" />
-    <title>Quizzes Dasboard</title>
-  </head>
 
-  <body>
-    <!-- Start Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">LOGO</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"
-                >Quizzes</a
-              >
+<head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>dashboard</title>
+   <link href="https://kit-pro.fontawesome.com/releases/v5.15.4/css/pro.min.css" rel="stylesheet">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+   <!-- Start Navbar -->
+   <nav class="navbar navbar-expand-lg navbar-light ">
+      <div class="container">
+         <a class="navbar-brand" href="index.html">
+            <img src="img/logo.svg" alt="Turtles">
+         </a>
+         <ul class="navbar-nav me-auto ">
+            <li class="nav-item me-3">
+               <a class="nav-link" aria-current="page" href="dashboard.html">Quizes</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+               <a class="nav-link" href="about.html">About</a>
             </li>
-          </ul>
-          <div class="d-flex">
-            <a href="home.html" id="logout-btn"
-              ><i class="far fa-user"> </i> logout</a
-            >
-          </div>
-        </div>
+         </ul>
+         <div>
+            <a href="login.html" class="btn secondaryBtn me-1">Sign out</a>
+         </div>
       </div>
-    </nav>
-    <!-- End Navbar -->
+   </nav>
+   <!-- End Navbar -->
+   <section class="dashboard">
+      <div class="page-header">
+         <div class="container">
+            <div class="page-header-text">
+               <div class="dashboard-header d-flex">
+                  <div class="d-flex align-items-center flex-column ">
+                     <div id="profileImg" class="dashboard-center ">
+                        <img class="dashboard-img" src="img/bt1.png" alt="" id="profile">
+                     </div>
+                     <div class="welcome">
+                        <div class="dashboard-title">Hi <span id="username">Maya</span> !</div>
+                        <div class="dashboard-des">Welcome back</div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="container ">
+         <div class="quizes-title">
+            <div class="quize-bold">Quizes</div>
+            <div class="quize-des">Test your knowledge</div>
+         </div>
+         <div class="row quizes-padding ">
+            <div class="col-lg-4 col-md-6 col-sm-6 ">
+               <div class="quizes-card">
+                  <div class="box_grid">
+                     <img src="img/solar.jpg" alt="">
+                     <div class="quiz-card">
+                        <div class="card-title">
+                           solar system
+                        </div>
+                        <ul>
+                           <li> <i class="far fa-book-open"></i><span class="mx-1">5</span><span
+                                 class="dm-none">Question</span></li>
+                           <li> <i class="far fa-history"></i><span class="mx-1">01.25</span><span
+                                 class="dm-none">Minute</span></li>
+                           <li><a href="quiz.html" id="quizStart1" class="btn primaryBtn start-btn ">Start</a></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                  <div class="box_grid">
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                  <div class="box_grid">
+                  </div>
+               </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 ">
+               <div class="quizes-card">
+                  <div class="box_grid">
+                     <img src="img/front-end.jpg" alt="">
+                     <div class="quiz-card">
+                        <div class="card-title">
+                           front-end
+                        </div>
+                        <ul>
+                           <li> <i class="far fa-book-open"></i><span class="mx-1">5</span><span
+                                 class="dm-none">Question</span></li>
+                           <li> <i class="far fa-history"></i><span class="mx-1">01.25</span><span
+                                 class="dm-none">Minute</span></li>
+                           <li><a href="quiz.html" id="quizStart2" class="btn primaryBtn start-btn">Start</a></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                  <div class="box_grid">
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                  <div class="box_grid">
+                  </div>
+               </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 ">
+               <div class="quizes-card">
+                  <div class="box_grid">
+                     <img src="img/geography.jpg" alt="">
+                     <div class="quiz-card">
+                        <div class="card-title">
+                           geography
+                        </div>
+                        <ul>
+                           <li> <i class="far fa-book-open"></i><span class="mx-1">5</span><span
+                                 class="dm-none">Question</span></li>
+                           <li> <i class="far fa-history"></i><span class="mx-1">01.25</span><span
+                                 class="dm-none">Minute</span></li>
+                           <li><a href="quiz.html" id="quizStart3" class="btn primaryBtn start-btn">Start</a></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                  <div class="box_grid">
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                  <div class="box_grid">
+                  </div>
+               </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 ">
+               <div class="quizes-card">
+                  <div class="box_grid">
+                     <img src="img/body.jpg" alt="">
+                     <div class="quiz-card">
+                        <div class="card-title">
+                           human body
+                        </div>
+                        <ul>
+                           <li> <i class="far fa-book-open"></i><span class="mx-1">5</span><span
+                                 class="dm-none">Question</span></li>
+                           <li> <i class="far fa-history"></i><span class="mx-1">01.25</span><span
+                                 class="dm-none">Minute</span></li>
+                           <li><a href="quiz.html" id="quizStart4" class="btn primaryBtn start-btn">Start</a></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                  <div class="box_grid">
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                  <div class="box_grid">
+                  </div>
+               </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6 ">
+               <div class="quizes-card">
+                  <div class="box_grid">
+                     <img src="img/IT.png" alt="">
+                     <div class="quiz-card">
+                        <div class="card-title">
+                           information technology
+                        </div>
+                        <ul>
+                           <li> <i class="far fa-book-open"></i><span class="mx-1">5</span><span
+                                 class="dm-none">Question</span></li>
+                           <li> <i class="far fa-history"></i><span class="mx-1">01.25</span><span
+                                 class="dm-none">Minute</span></li>
+                           <li><a href="quiz.html" id="quizStart5" class="btn primaryBtn start-btn">Start</a></li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                  <div class="box_grid">
+                  </div>
+               </div>
+               <div class="col-lg-4 col-md-6 col-sm-12 ">
+                  <div class="box_grid">
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </section>
+   <aside class="floaty-bar">
+      <div class="main-header box-shadow-header floaty">
+         <div class="container">
+            <div class="footer d-flex align-items-center ">
+               <div class="col-md-4 center">
+                  <i class="fas fa-book-open me-1"></i> <a class="white" href="dashboard.html">Quizes</a>
+               </div>
+               <div class="border"></div>
+               <div class="col-md-4 center">
+                  <i class="fas fa-rabbit me-1"></i><a class="white" href="about.html">About</a>
+               </div>
+            </div>
+         </div>
+   </aside>
+   <footer>
+      <div class="container">
+         <div class="footer-link  d-flex justify-content-between">
+            <div class="d-flex">
+               <div><a class="link" href="about.html">About</a></div>
+               <div><a class="link" href="#">Help</a></div>
+               <div><a class="link" href="#">Privacy</a></div>
+               <div><a class="link" href="#"> Terms </a></div>
+               <div><a class="link" href="#">Contact</a></div>
+            </div>
+            <div class="link copyright">Copyright © 2021 Turtles.</div>
+         </div>
+      </div>
+   </footer>
+   <script src="js/dashboard.js"></script>
 
-    <!-- Start Greeting -->
-    <div class="p-5 mb-4 rounded-3 greeting">
-      <div class="container-fluid py-5">
-        <div class="userImg" id="profileImg">
-          <img src="img/img_placeholder.png" alt="profile image" id="profile" />
-        </div>
-        <h4 class="display-5 fs-5">
-          <span>Hi</span> <span id="username">Maya</span><span>!</span> Welcome
-          back
-        </h4>
-        <div class="col-md-8 fs-4 user_quizzes_details">
-          <div id="quizzesPassed"><span>3</span> <br />Quizzes Passed</div>
-          <div id="averagePoint"><span>70%</span> <br />Average Point</div>
-        </div>
-      </div>
-    </div>
-    <!-- End Greeting -->
-    <!-- Start Popular Section -->
-    <div class="p-5 mb-4 rounded-3 popular_quizzes">
-      <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Quizzes</h1>
-        <p class="fs-4">Test Your Knowledge</p>
-      </div>
-    </div>
-    <!-- End Popular Section -->
+</body>
 
-    <!-- Start All-Quizzes Section -->
-    <section class="all_quizzes">
-      <div class="card quiz" style="width: 22rem">
-        <img
-          src="img/img_placeholder.png"
-          class="card-img-top"
-          alt="quiz_photo"
-          id="quizImg1"
-        />
-        <div class="card-body">
-          <h5 class="card-title" id="quizTitle1">Solar System</h5>
-          <div class="quiz_details">
-            <div id="numQuestion1">
-              <i class="fas fa-book-open"></i> 5 Questions
-            </div>
-            <div id="numDuration1"><i class="fas fa-clock"></i> 5 Minutes</div>
-            <a
-              href="quiz.html"
-              class="btn btn-primary start-btn"
-              id="quizStart1"
-              >Start</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card quiz" style="width: 22rem">
-        <img
-          src="img/img_placeholder.png"
-          class="card-img-top"
-          alt="quiz_photo"
-          id="quizImg2"
-        />
-        <div class="card-body">
-          <h5 class="card-title" id="quizTitle2">Front-end</h5>
-          <div class="quiz_details">
-            <div id="numQuestion2">
-              <i class="fas fa-book-open"> </i> 5 Questions
-            </div>
-            <div id="numDuration2"><i class="fas fa-clock"></i> 5 Minutes</div>
-            <a
-              href="quiz.html"
-              class="btn btn-primary start-btn"
-              id="quizStart2"
-              >Start</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card quiz" style="width: 22rem">
-        <img
-          src="img/img_placeholder.png"
-          class="card-img-top"
-          alt="quiz_photo"
-          id="quizImg3"
-        />
-        <div class="card-body">
-          <h5 class="card-title" id="quizTitle3">Geography</h5>
-          <div class="quiz_details">
-            <div id="numQuestion3">
-              <i class="fas fa-book-open"></i> 5 Questions
-            </div>
-            <div id="numDuration3"><i class="fas fa-clock"></i> 5 Minutes</div>
-            <a
-              href="quiz.html"
-              class="btn btn-primary start-btn"
-              id="quizStart3"
-              >Start</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card quiz" style="width: 22rem">
-        <img
-          src="img/img_placeholder.png"
-          class="card-img-top"
-          alt="quiz_photo"
-          id="quizImg4"
-        />
-        <div class="card-body">
-          <h5 class="card-title" id="quizTitle4">Human Body<span></span></h5>
-          <div class="quiz_details">
-            <div id="numQuestion4">
-              <i class="fas fa-book-open"></i> 5 Questions
-            </div>
-            <div id="numDuration4"><i class="fas fa-clock"></i> 5 Minutes</div>
-            <a
-              href="quiz.html"
-              class="btn btn-primary start-btn"
-              id="quizStart4"
-              >Start</a
-            >
-          </div>
-        </div>
-      </div>
-      <div class="card quiz" style="width: 22rem">
-        <img
-          src="img/img_placeholder.png"
-          class="card-img-top"
-          alt="quiz_photo"
-          id="quizImg5"
-        />
-        <div class="card-body">
-          <h5 class="card-title" id="quizTitle5">
-            Information about technology<span></span>
-          </h5>
-          <div class="quiz_details">
-            <div id="numQuestion5">
-              <i class="fas fa-book-open"></i> 5 Questions
-            </div>
-            <div id="numDuration5"><i class="fas fa-clock"></i> 5 Minutes</div>
-            <a
-              href="quiz.html"
-              class="btn btn-primary start-btn"
-              id="quizStart5"
-              >Start</a
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End All-Quizzes Section -->
-    <!-- Start Footer -->
-    <footer class="fs-3">
-      <p>All Rights Reserved @2021 Turtles.com</p>
-    </footer>
-    <!-- End Footer -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script src="js/dashboard.js"></script>
-  </body>
 </html>
