--- a/login.html
+++ b/login.html
@@ -1,65 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>login</title>
-      <link href="https://kit-pro.fontawesome.com/releases/v5.15.4/css/pro.min.css" rel="stylesheet">
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-      <link rel="stylesheet" href="css/style.css">
-   </head>
-   <body>
-      <nav class="navbar navbar-expand-lg navbar-light ">
-         <div class="container">
-            <a class="navbar-brand" href="index.html">
+
+<head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>login</title>
+   <link href="https://kit-pro.fontawesome.com/releases/v5.15.4/css/pro.min.css" rel="stylesheet">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+   <!-- Start Navbar -->
+   <nav class="navbar navbar-expand-lg navbar-light ">
+      <div class="container">
+         <a class="navbar-brand" href="index.html">
             <img src="img/logo.svg" alt="Turtles">
-            </a>
-            <div class="collapse navbar-collapse" id="navbarText">
-               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                     <a class="nav-link quiz-link " aria-current="page" href="dashboard.html">Quizes</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="#">About</a>
-                  </li>
-               </ul>
-               <a href="login.html" class="btn secondaryBtn me-2">Login</a>
-               <a href="signUp.html" class="btn primaryBtn">Sign Up</a>
-            </div>
+         </a>
+         <ul class="navbar-nav me-auto ">
+            <li class="nav-item me-3">
+               <a class="nav-link" aria-current="page" href="#">Quizes</a>
+            </li>
+            <li class="nav-item">
+               <a class="nav-link" href="about.html">About</a>
+            </li>
+         </ul>
+         <div>
+            <a href="login.html" class="btn secondaryBtn me-1">Login</a>
+            <a href="signUp.html" class="btn primaryBtn">Sign Up</a>
          </div>
-      </nav>
-      <section class="Login" >
-         <div class="container mt-5 ">
+      </div>
+   </nav>
+   <!-- End Navbar -->
+   <section class="Login">
+      <div class="container mt-5 ">
          <div class="row justify-content-center">
-         <div class="col-lg-6 col-md-8 col-sm-10">
-            <div class="card mb-5">
-               <div class="login-card-header mt-3">Log In to Your Account! </div>
-               <div class="card-body">
-                  <form id="form-register" role="form" method="" action="">
-                     <div class="form-group ">
-                        <label for="email" class="control-label">E-Mail Address</label>
-                        <input id="email" type="email" class="form-control" name="email">
-                        <div class="check"> </div>
+            <div class="col-lg-6 col-md-8 col-sm-10">
+               <div class="card mb-5">
+                  <div class="login-card-header mt-3">Log In to Your Account! </div>
+                  <div class="card-body">
+                     <form id="form-register" role="form" method="" action="">
+                        <div class="form-group ">
+                           <label for="email" class="control-label">E-Mail Address</label>
+                           <input id="email" type="email" class="form-control" name="email">
+                           <div class="check"> </div>
+                        </div>
+                        <div class="form-group ">
+                           <label for="password" class="control-label">Password</label>
+                           <input id="password" type="password" class="form-control" autocomplete="off" name="password">
+                           <div class="check"> </div>
+                        </div>
+                        <div class="form-group">
+                           <input type="button" class="btn primaryBtn white full-width" id='btn' value="Login">
+                        </div>
+                     </form>
+                     <div class="mt-4">
+                        <span>Don't have an account? <a class="ms-1 regster-href" href="signUp.html">Sign up</a> </span>
                      </div>
-                     <div class="form-group ">
-                        <label for="password" class="control-label">Password</label>
-                        <input id="password" type="password" class="form-control" autocomplete="off" name="password" >
-                        <div class="check"> </div>
-                     </div>
-                     <div class="form-group">
-                        <input type="button" class="btn primaryBtn full-width" id='btn' value="Login">
-                     </div>
-                  </form>
-                  <div class="mt-4">
-                     <span>Don't have an account? <a class="ms-1 regster-href" href="signUp.html">Sign up</a> </span>
                   </div>
                </div>
             </div>
+            <div>
+   </section>
+   <aside class="floaty-bar">
+      <div class="main-header box-shadow-header floaty">
+         <div class="container">
+            <div class="footer d-flex align-items-center ">
+               <div class="col-md-4 center">
+                  <i class="fas fa-book-open me-1"></i> <a class="white" href="#">Quizes</a>
+               </div>
+               <div class="border"></div>
+               <div class="col-md-4 center">
+                  <i class="fas fa-rabbit me-1"></i><a class="white" href="about.html">About</a>
+               </div>
+            </div>
          </div>
-         <div>
-      </section>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-      <script src="js/login.js"></script>
-   </body>
+   </aside>
+   <footer>
+      <div class="container">
+         <div class="footer-link  d-flex justify-content-between">
+            <div class="d-flex">
+               <div><a class="link" href="about.html">About</a></div>
+               <div><a class="link" href="#">Help</a></div>
+               <div><a class="link" href="#">Privacy</a></div>
+               <div><a class="link" href="#"> Terms </a></div>
+               <div><a class="link" href="#">Contact</a></div>
+            </div>
+            <div class="link copyright">Copyright © 2021 Turtles.</div>
+         </div>
+      </div>
+   </footer>
+   <script src="js/login.js"></script>
+</body>
+
 </html>
