--- a/quiz.html
+++ b/quiz.html
@@ -1,78 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./img/star.ico" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <link rel="stylesheet" href="css/quiz.css" />
-    <title>Turtles</title>
-  </head>
 
-  <body>
-    <div class="info_box activeInfo">
-      <div class="info-title"><span>Some Rules of this Quiz</span></div>
-      <div class="info-list">
-        <div class="info">
-          1. You will have only <span>15 seconds</span> per each question.
-        </div>
-        <div class="info">
-          2. Once you select your answer, it can't be undone.
-        </div>
-        <div class="info">
-          3. You can't select any option once time goes off.
-        </div>
-        <div class="info">
-          4. You can't exit from the Quiz while you're playing.
-        </div>
-        <div class="info">
-          5. You'll get points on the basis of your correct answers.
-        </div>
-      </div>
-      <div class="buttons">
-        <button class="quit"><a href="dashboard.html">Exit Quiz</a></button>
-        <button class="restart">Continue</button>
-      </div>
-    </div>
-    <div class="quiz-container">
-      <div class="quiz-info">
-        <div class="category">Category: <span class="quiz-name"></span></div>
-        <div class="counter">
-          Questions Counter:
-          <span class="questionsNum">5</span>
-        </div>
-      </div>
-      <div class="time_line"></div>
-      <div class="question"></div>
-      <div class="all-answers"></div>
-      <button class="submit-btn">Submit</button>
-      <div class="bullets">
-        <div class="spans"></div>
-        <div class="timer">
-          <div class="time_left_txt">Time Left</div>
-          <div class="timer_sec">15</div>
-        </div>
-      </div>
-    </div>
-    <div class="result_box">
-      <div class="icon">
-        <i class="fas fa-crown"></i>
-      </div>
-      <div class="complete_text">You've completed the Quiz!</div>
-      <div class="score_text">
-        <!-- Here I've inserted Score Result from JavaScript -->
-      </div>
-      <div class="buttons">
-        <button class="Show_Answer">Show Answer</button>
-        <button class="quit"><a href="dashboard.html">Quit</a></button>
-      </div>
-    </div>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>dashboard</title>
+  <link href="https://kit-pro.fontawesome.com/releases/v5.15.4/css/pro.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/quiz.css" />
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-    <script src="js/dashboard.js"></script>
-    <script src="js/quiz.js"></script>
-  </body>
+<body>
+  <!-- Start Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light ">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="img/logo.svg" alt="Turtles">
+      </a>
+      <ul class="navbar-nav me-auto ">
+        <li class="nav-item me-3">
+          <a class="nav-link" aria-current="page" href="dashboard.html">Quizes</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+      </ul>
+      <div>
+        <a href="login.html" class="btn secondaryBtn me-1">Sign out</a>
+      </div>
+    </div>
+  </nav>
+  <!-- End Navbar -->
+
+  <div class="info_box activeInfo">
+    <div class="info-title"><span>Some Rules of this Quiz</span></div>
+    <div class="info-list">
+      <div class="info">
+        1. You will have only <span>15 seconds</span> per each question.
+      </div>
+      <div class="info">
+        2. Once you select your answer, it can't be undone.
+      </div>
+      <div class="info">
+        3. You can't select any option once time goes off.
+      </div>
+      <div class="info">
+        4. You can't exit from the Quiz while you're playing.
+      </div>
+      <div class="info">
+        5. You'll get points on the basis of your correct answers.
+      </div>
+    </div>
+    <div class="buttons">
+      <button class="btn borderBtn btn-width mt-1 me-1 quit"><a href="dashboard.html">Exit Quiz</a></button>
+      <button class="btn primaryBtn btn-width mt-1 me-1 restart">Continue</button>
+    </div>
+  </div>
+  <div class="quiz-container">
+
+    <div class="page-header">
+      <div class="container">
+        <div class=" page-header-text category">Quize (<span class="questionsNum">5</span>):
+          <span class="quiz-name"></span></div>
+          <h4 class="total"></h4>
+      </div>
+    </div>
+    <div class="container result">
+      <div class="row inner-page">
+        <div class="d-flex justify-content-between align-items-center">
+          <div><span class="timer timer_sec me-2"></span> <span class="time_left_txt"> Time left</span></div>
+          <div><a href="dashboard.html" class="btn primaryBtn">Start Over</a></div>
+        </div>
+        <div class="col-lg-12 ">
+          <div class="time_line"></div>
+
+        </div>
+        <div class="question"></div>
+        <div class="answers all-answers"></div>
+        <div class="d-flex justify-content-between mt-4">
+          <div class="bullets">
+            <div class="spans"></div>
+          </div>
+          <button class="btn primaryBtn px-4 submit-btn">next</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="result_box ">
+    <div>
+      <img class="result_img" src="" alt="">
+    </div>
+    <div class="complete_text">You've completed the Quiz!</div>
+    <div class="score_text">
+      <!-- Here I've inserted Score Result from JavaScript -->
+    </div>
+    <div class="buttons">
+      <button class="btn borderBtn btn-width mt-1 me-1 Show_Answer">Show Answer</button>
+      <button class="btn primaryBtn btn-width mt-1 me-1 quit"><a class="white" href="dashboard.html">Quit</a></button>
+    </div>
+  </div>
+
+  <aside class="floaty-bar">
+    <div class="main-header box-shadow-header floaty">
+      <div class="container">
+        <div class="footer d-flex align-items-center ">
+          <div class="col-md-4 center">
+            <i class="fas fa-book-open me-1"></i> <a class="white" href="dashboard.html">Quizes</a>
+          </div>
+          <div class="border"></div>
+          <div class="col-md-4 center">
+            <i class="fas fa-rabbit me-1"></i><a class="white" href="#">About</a>
+          </div>
+        </div>
+      </div>
+  </aside>
+  <footer>
+    <div class="container">
+      <div class="footer-link  d-flex justify-content-between">
+        <div class="d-flex">
+          <div><a class="link" href="about.html">About</a></div>
+          <div><a class="link" href="#">Help</a></div>
+          <div><a class="link" href="#">Privacy</a></div>
+          <div><a class="link" href="#"> Terms </a></div>
+          <div><a class="link" href="#">Contact</a></div>
+        </div>
+        <div class="link copyright">Copyright © 2021 Turtles.</div>
+      </div>
+    </div>
+  </footer>
+  <script src="js/dashboard.js"></script>
+  <script src="js/quiz.js"></script>
+</body>
+
 </html>
