--- a/quiz.html
+++ b/quiz.html
@@ -117,7 +117,7 @@
         </div>
       </div>
   </aside>
-  <footer>
+  <footer class="active">
     <div class="container">
       <div class="footer-link  d-flex justify-content-between">
         <div class="d-flex">
